--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,15 @@
 *.lai
 *.la
 *.a
+
+# CMakeFiles
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
+# Project files
+.cproject
+.project
+Makefile
