--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,24 +38,24 @@ set(SOURCES
     torrentsync/utils/log/Log.cpp
     torrentsync/utils/log/Logger.cpp
     torrentsync/utils/log/LogStream.cpp
-    torrentsync/dht/AddressData.cpp
-    torrentsync/dht/Address.cpp 
+    torrentsync/dht/NodeData.cpp
+    torrentsync/dht/Node.cpp 
     torrentsync/dht/RoutingTable.cpp
-    torrentsync/dht/Node.cpp
+    torrentsync/dht/Peer.cpp
     torrentsync/dht/message/Message.cpp
     torrentsync/dht/message/Ping.cpp
-    torrentsync/dht/AddressTree.cpp
+    torrentsync/dht/NodeTree.cpp
     torrentsync/dht/message/BEncodeDecoder.cpp
     torrentsync/utils/RandomGenerator.cpp)
 set(SOURCES_UT
     test/torrentsync/utils/log/Log.cpp
     test/torrentsync/utils/Buffer.cpp
-    test/torrentsync/dht/AddressData.cpp
-    test/torrentsync/dht/Address.cpp
+    test/torrentsync/dht/NodeData.cpp
     test/torrentsync/dht/Node.cpp
+    test/torrentsync/dht/Peer.cpp
     test/torrentsync/dht/RoutingTable.cpp
-    test/torrentsync/dht/AddressBucket.cpp
-    test/torrentsync/dht/AddressTree.cpp
+    test/torrentsync/dht/NodeBucket.cpp
+    test/torrentsync/dht/NodeTree.cpp
     test/torrentsync/dht/message/Ping.cpp
     test/torrentsync/dht/message/BEncodeEncoder.cpp
     test/torrentsync/dht/message/BEncodeDecoder.cpp)
