A lot of stuff, I should have done more commits :(
Fixed bug: unordered buckets in the set

Routing tables functions are now split in 2 files
Added Yield util class
getClosestNode in NodeTree implemented for find_node
Distance operator moved to NodeData
Added comments and doc
findBucket in NodeTree is now O(log n) thanks to the bugfix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(SOURCES
     torrentsync/dht/NodeData.cpp
     torrentsync/dht/NodeTree.cpp
     torrentsync/dht/RoutingTable.cpp
+    torrentsync/dht/RoutingTable_MessageHandlers.cpp
     torrentsync/dht/message/BEncodeDecoder.cpp
     torrentsync/dht/message/BEncodeEncoder.cpp
     torrentsync/dht/message/FindNode.cpp
