Switched to STATIC lib
At the moment it's not a proper .so object anyway, just shared code
between unit tests and main application.
To be used a shared lib it would require making a real interface to it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ find_package(Threads)
 set(COMMON_LIBS ${CMAKE_THREAD_LIBS_INIT})
 
 # common source code lib
-add_library(TorrentSync SHARED ${SOURCES})
+add_library(TorrentSync STATIC ${SOURCES})
 
 # boost
 find_package(Boost
