--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if ( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
 
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
     SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
-    SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -std=c++11")
+    SET(CMAKE_CXX_FLAGS_DEBUG "-ggdb -O0 -Wall -std=c++11")
 
     SET(CMAKE_AR "gcc-ar")
     SET(CMAKE_RANLIB "gcc-ranlib")
