--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,14 @@ CMakeFiles
 Makefile
 cmake_install.cmake
 install_manifest.txt
+CTestTestfile.cmake
 
 # Project files
 .cproject
 .project
 Makefile
+
+TorrentSync
+.ycm_extra_conf.pyc
+tags
+unittest
