Trying to fix missing gcc-ar

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
         - ubuntu-toolchain-r-test
         - boost-latest
     packages:
+        - gcc-4.9
         - g++-4.9
         - libboost1.55-all-dev
 
