--- a/.travis.yml
+++ b/.travis.yml
@@ -18,16 +18,17 @@ matrix:
             - libboost1.55-all-dev
             - g++-5
 
-    - env: COMPILER=g++-5
-      addons:
-        apt:
-          sources:
-            - boost-latest
-            - ubuntu-toolchain-r-test
-          packages:
-            - valgrind
-            - libboost1.55-all-dev
-            - g++-5
+# can't link on travis :(
+#    - env: COMPILER=g++-5
+#      addons:
+#        apt:
+#          sources:
+#            - boost-latest
+#            - ubuntu-toolchain-r-test
+#          packages:
+#            - valgrind
+#            - libboost1.55-all-dev
+#            - g++-5
 
 install:
   - CXX="$COMPILER"
@@ -35,4 +36,4 @@ install:
 script:
   - cmake .
   - make VERBOSE=1
-  - ./unittest
+  - valgrind ./unittest
