--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ sudo: false
 cache: apt
 language: cpp
 
+env:
+  global:
+   # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
+   #   via the "travis encrypt" command using the project repo's public key
+   - secure: "mKVvXqOYRr8f6gnjvigHoo5oYXmuHesDpjNOVZRuu33Of5PxJ55HQQvh3JtyrsMGGTU9TmsaevAP+BGhwhQLJ5dFWEASX2HhOlPhRtW1AP9Aj1CRtdQYCCJPm7ig0xGUS75S6oF/s/BG/Gw+Xs0vYbqGZrCKEh3SlYwNPzT6XfY="
+
+
+
 matrix:
   include:
 
@@ -17,6 +25,14 @@ matrix:
             - valgrind
             - libboost1.55-all-dev
             - g++-5
+          coverity_scan:
+            project:
+              name: "mellon85/TorrentSync"
+              description: "Build submitted via Travis CI"
+            notification_email: mellon85@gmail.com
+            build_command_prepend: "cmake ."
+            build_command: "make -j"
+            branch_pattern: coverity_scan
 
 # can't link on travis :(
 #    - env: COMPILER=g++-5
@@ -35,5 +51,5 @@ install:
 
 script:
   - cmake .
-  - make VERBOSE=1
+  - make -j VERBOSE=1
   - valgrind ./unittest
