KyotoCabinet to SQlite3
Much easier to handle multiple connections to the same DB with sqlite than with
KyotoCabinet

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-sudo: required
-dist: trusty
+sudo: false
 cache: apt
 language: cpp
 
@@ -17,7 +16,7 @@ matrix:
             - clang-3.6
             - libboost1.55-all-dev
             - g++-5
-            - libkyotocabinet-dev
+            - libsqlite3-dev
 
 # can't link on travis :(
 #    - env: COMPILER=g++-5
